Corrected contact spacing on Desktop view

--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ label {
 
 .hero {
   background-color: #ffba1d;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23ffffff' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23ffffff' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 /*--ABOUT--*/
@@ -356,8 +356,7 @@ header#home .hero {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  height: 480px;
-  height: 30em;
+  
 }
 
 #p3 h3, #p4 h3, #p4 h4 {
@@ -369,7 +368,6 @@ header#home .hero {
   margin: 15px;
   margin: .038em;
   width: 50%;
-  height: 450px;
 }
 
 ul, li {
@@ -389,3 +387,39 @@ ul, li {
 }
 
 }/*--media query min 769 ends--*/
+
+/*---------- media query min 1200 starts ----------*/
+
+@media screen and (min-width: 1200px) {
+
+
+#questions  {
+  width: 20%;
+}
+
+#c1{
+  width: 20%;
+}
+
+#c2 {
+  width: 25%;
+}
+#contact {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  height: 250px;
+}
+
+.fa-linkedin, .fa-github-square, .fa-envelope {
+  font-size: 56px;
+  font-size: 3.5em;
+  margin: 10px;
+}
+
+#questions h2 {
+  font-size: 32px;
+}
+
+
+}/*--media query min 1200 ends--*/
